hphp/hack/test/typecheck/expression_trees/nesting/vars/allowed.php.exp
ERROR: File "allowed.php", line 6, characters 27-28:
Variable `$x` is undefined, or not always defined. (Naming[2050])
