hphp/hack/test/typecheck/expression_trees/nesting/vars/allowed.php
<?hh
<<file:__EnableUnstableFeatures('expression_trees')>>
<<file:__EnableUnstableFeatures('expression_tree_nested_bindings')>>

function f(): void {
  ExampleDsl`${ExampleDsl`$x`}`;
}
